# agentic-sdlc-test

./: .gitignore  README.md  pyproject.toml
openspec/changes/cli-rss-reader/: design.md  proposal.md  tasks.md
openspec/changes/cli-rss-reader/specs/article-reader/: spec.md
openspec/changes/cli-rss-reader/specs/cli-interface/: spec.md
openspec/changes/cli-rss-reader/specs/feed-fetching/: spec.md
openspec/changes/cli-rss-reader/specs/feed-management/: spec.md
openspec/changes/fix-add-feed-popover/: design.md  proposal.md  tasks.md
openspec/changes/fix-add-feed-popover/specs/tui-feed-management/: spec.md
openspec/changes/modal-border-style/: design.md  proposal.md  tasks.md
openspec/changes/modal-border-style/specs/modal-styling/: spec.md
openspec/changes/tui-layout-and-commands/: design.md  proposal.md  tasks.md
openspec/changes/tui-layout-and-commands/specs/article-reader/: spec.md
openspec/changes/tui-layout-and-commands/specs/tui-feed-management/: spec.md
openspec/changes/tui-three-pane-reader/: design.md  proposal.md  tasks.md
openspec/changes/tui-three-pane-reader/specs/article-delete/: spec.md
openspec/changes/tui-three-pane-reader/specs/article-favorite/: spec.md
openspec/changes/tui-three-pane-reader/specs/article-reader/: spec.md
rss_reader/: __main__.py  cli.py  discovery.py  feed.py  models.py  storage.py  tui.py
tests/: test_article_links.py  test_cli.py  test_discovery.py  test_feed.py  test_storage.py  test_tui.py
